// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqs-event-source 1`] = `
[
  {
    "apiVersion": "argoproj.io/v1alpha1",
    "kind": "EventSource",
    "metadata": {
      "name": "my-sqs-source",
    },
    "spec": {
      "sqs": {
        "default-event": {
          "accessKey": {
            "key": "accessKey",
            "name": "aws-secret",
          },
          "jsonBody": true,
          "queue": "my-queue",
          "region": "us-west-2",
          "secretKey": {
            "key": "secretKey",
            "name": "aws-secret",
          },
          "waitTimeSeconds": 20,
        },
      },
    },
  },
]
`;

exports[`sqs-event-source with complete config 1`] = `
[
  {
    "apiVersion": "argoproj.io/v1alpha1",
    "kind": "EventSource",
    "metadata": {
      "name": "my-sqs-source",
    },
    "spec": {
      "sqs": {
        "default-event": {
          "accessKey": {
            "key": "accessKey",
            "name": "aws-secret",
          },
          "jsonBody": true,
          "queue": "my-queue",
          "region": "us-west-2",
          "secretKey": {
            "key": "secretKey",
            "name": "aws-secret",
          },
          "waitTimeSeconds": 20,
        },
      },
    },
  },
]
`;

exports[`supports multiple named events 1`] = `
[
  {
    "apiVersion": "argoproj.io/v1alpha1",
    "kind": "EventSource",
    "metadata": {
      "name": "multi-sqs-source",
    },
    "spec": {
      "sqs": {
        "high-priority": {
          "accessKey": {
            "key": "accessKey",
            "name": "aws-secret",
          },
          "jsonBody": true,
          "queue": "high-priority-queue",
          "region": "us-west-2",
          "secretKey": {
            "key": "secretKey",
            "name": "aws-secret",
          },
          "waitTimeSeconds": 20,
        },
        "low-priority": {
          "accessKey": {
            "key": "accessKey",
            "name": "aws-secret",
          },
          "dlq": true,
          "queue": "low-priority-queue",
          "region": "us-west-2",
          "secretKey": {
            "key": "secretKey",
            "name": "aws-secret",
          },
          "waitTimeSeconds": 10,
        },
      },
    },
  },
]
`;
